# diamonds

./: Makefile  README.md  pyproject.toml
src/: runner.py
src/config/: .env  config.py
src/model/: model_service.py
src/model/models/: diamonds_rf
src/model/pipeline/: collection.py  model.py  preparation.py
