[tool.poetry]
name = "diamonds"
version = "0.1.0"
description = ""
authors = ["fridchikn24 <10899472+fridchikn24@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
loguru = "^0.7.3"
pydantic = "^2.10.4"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
